[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodela"
version = "1.0.0"
description = "SDK wrapper for Nodela dev api's to aide in implementation of Nodela on python servers, by abstracting away the api complexity and providing easy to use interfaces."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "NodelaPay LTD", email = "sayhello@nodela.co"}
]
keywords = [ "Nodela", "Stablecoins", "SDK", "Crypto", "Payments"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
  "commitizen>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/Devkrea8-Technologies/nodela-python-sdk.git"
Documentation = "https://docs.nodela.co/sdks/python"
Repository = "https://github.com/Devkrea8-Technologies/nodela-python-sdk.git"
"Bug Tracker" = "https://github.com/Devkrea8-Technologies/nodela-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nodela = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
tag_format = "v$version"
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src/nodela --cov-report=term-missing --cov-report=html"